# RTC-Rust

./: .gitignore  Cargo.toml  README.md  convert.sh  image-diff.sh  save.sh
.github/workflows/: rust.yml
images/: chapter13  gallery.md
lib/rust-rtc/: Cargo.toml
lib/rust-rtc/src/: bar.rs  baz.rs  camera.rs  canvas.rs  colors.rs  cones.rs  cubes.rs  cylinders.rs  foo.rs  groups.rs  intersections.rs  json5.rs  lib.rs  lights.rs  materials.rs  math.rs  matrices.rs  patterns.rs  perlin_noise.rs  planes.rs  rays.rs  shapes.rs  spheres.rs  test_shape.rs  transformations.rs  tuples.rs  utils.rs  world.rs  world_loader.rs
scenes/: chapter12_cubes.json5  chapter13_cones.json5  chapter13_half_open_cylinders.json5  chapter7.json5  new_scene.json5  test1.json5
