[package]
name = "rust-rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.23" }
derive_more = "0.99.17"
indicatif = "0.17.3"
clap.workspace = true
rayon = "1.7"
json5 = "0.4.1"
serde = { version = "1.0.177", features = ["derive"] }
thiserror = "1.0.44"
anyhow.workspace = true

[dev-dependencies]
approx = "0.5.1"
rstest = "0.17.0"
